--- a/test/fixtures/notes.yml
+++ b/test/fixtures/notes.yml
@@ -1,11 +1,10 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
   title: MyString
   content: MyText
-  user: one
+  user_id: 1
 
-two:
-  title: MyString
-  content: MyText
-  user: two
+# two:
+#   title: MyString
+#   content: MyText
