--- a/test/fixtures/tags.yml
+++ b/test/fixtures/tags.yml
@@ -1,9 +1,9 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
   name: MyString
-  user: one
+  user_id: 1
 
 two:
-  name: MyString
-  user: two
+  name: MyString_2
+  user_id: 1
