--- a/config/database.yml
+++ b/config/database.yml
@@ -79,7 +79,7 @@ test:
 #
 production:
   <<: *default
-  database: inspiro_production
-  username: inspiro
-  password: <%= ENV["INSPIRO_DATABASE_PASSWORD"] %>
+  database: <%= ENV["POSTGRES_DB"] %>
+  username: <%= ENV["POSTGRES_USER"] %>
+  password: <%= ENV["POSTGRES_PASSWORD"] %>
   url: <%= ENV["DATABASE_URL"] %>
